fix breadcrumb alignment on android. also, create more consistant look for breadcrumbs with ul or nav

--- a/scss/foundation/components/_breadcrumbs.scss
+++ b/scss/foundation/components/_breadcrumbs.scss
@@ -61,6 +61,7 @@ $crumb-slash: "/" !default;
   margin: 0;
   float: $default-float;
   font-size: $crumb-font-size;
+  line-height: $crumb-font-size;
   text-transform: $crumb-font-transform;
 
   &:hover a, &:focus a { text-decoration: $crumb-link-decor; }
